--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,365 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="381dp"
-        android:layout_height="203dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="vertical"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="409dp"
+        android:layout_height="819dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <HorizontalScrollView
-            android:id="@+id/scrollViewOp"
-            android:layout_width="match_parent"
-            android:layout_height="100dp">
-
-            <TextView
-                android:id="@+id/lblOperacion"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:width="379dp"
-                android:height="100dp"
-                android:gravity="center_vertical|end"
-                android:paddingStart="10sp"
-                android:paddingEnd="10sp"
-                android:singleLine="false"
-                android:textSize="50sp"
-                android:textStyle="bold" />
-        </HorizontalScrollView>
-
-        <HorizontalScrollView
-            android:id="@+id/scrollViewRes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/lblResultado"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:width="379dp"
-                android:height="100dp"
-                android:gravity="center_vertical|end"
-                android:paddingStart="10sp"
-                android:paddingEnd="10sp"
-                android:singleLine="false"
-                android:text="@string/resultado"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-        </HorizontalScrollView>
-
-    </LinearLayout>
-
-    <androidx.gridlayout.widget.GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="381dp"
-        android:layout_height="570dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <Button
-            android:id="@+id/btnMC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/mc"
-            android:textSize="30sp"
-            app:layout_column="0"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/btnMMas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/mmas"
-            android:textSize="30sp"
-            app:layout_column="1"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/btnMMenos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/mmenos"
-            android:textSize="30sp"
-            app:layout_column="2"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/btnMR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/mr"
-            android:textSize="30sp"
-            app:layout_column="3"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/btnC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/c"
-            android:textSize="30sp"
-            app:layout_column="0"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/btnPorcentaje"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/porcentaje"
-            android:textSize="30sp"
-            app:layout_column="1"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/btnDiv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/div"
-            android:textSize="30sp"
-            app:layout_column="2"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/btnMul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/mul"
-            android:textSize="30sp"
-            app:layout_column="3"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/btn7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n7"
-            android:textSize="30sp"
-            app:layout_column="0"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/btn8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n8"
-            android:textSize="30sp"
-            app:layout_column="1"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/btn9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n9"
-            android:textSize="30sp"
-            app:layout_column="2"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/btnRestar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/restar"
-            android:textSize="30sp"
-            app:layout_column="3"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/btn4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n4"
-            android:textSize="30sp"
-            app:layout_column="0"
-            app:layout_row="3" />
-
-        <Button
-            android:id="@+id/btn5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n5"
-            android:textSize="30sp"
-            app:layout_column="1"
-            app:layout_row="3" />
-
-        <Button
-            android:id="@+id/btn6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n6"
-            android:textSize="30sp"
-            app:layout_column="2"
-            app:layout_row="3" />
-
-        <Button
-            android:id="@+id/btnSumar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/sumar"
-            android:textSize="30sp"
-            app:layout_column="3"
-            app:layout_row="3" />
-
-        <Button
-            android:id="@+id/btn1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n1"
-            android:textSize="30sp"
-            app:layout_column="0"
-            app:layout_row="4" />
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n2"
-            android:textSize="30sp"
-            app:layout_column="1"
-            app:layout_row="4" />
-
-        <Button
-            android:id="@+id/btn3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n3"
-            android:textSize="30sp"
-            app:layout_column="2"
-            app:layout_row="4" />
-
-        <Button
-            android:id="@+id/btnIgual"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/igual"
-            android:textSize="30sp"
-            app:layout_column="3"
-            app:layout_gravity="fill_vertical"
-            app:layout_row="4"
-            app:layout_rowSpan="2" />
-
-        <Button
-            android:id="@+id/btn0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/n0"
-            android:textSize="30sp"
-            app:layout_column="0"
-            app:layout_columnSpan="2"
-            app:layout_gravity="fill_horizontal"
-            app:layout_row="5"
-            tools:ignore="DuplicateSpeakableTextCheck" />
-
-        <Button
-            android:id="@+id/btnComa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="95dp"
-            android:height="95dp"
-            android:insetLeft="3dp"
-            android:insetRight="3dp"
-            android:text="@string/coma"
-            android:textSize="30sp"
-            app:layout_column="2"
-            app:layout_row="5" />
-    </androidx.gridlayout.widget.GridLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frameContainer"
-        android:layout_width="409dp"
-        android:layout_height="100dp"
+        android:layout_width="407dp"
+        android:layout_height="69dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
@@ -375,7 +33,8 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigationMenu"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:menu="@menu/bottom_nav_menu" />
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
